--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,5 +1,4 @@
 .nav-container{
-    /* background-color: rgb(204, 193, 193); */
     padding: 45px 50px 50px 50px;
     border-bottom: 1px solid rgb(170, 170, 170);
     width: 80%;
@@ -12,7 +11,6 @@
 }
 
 nav{
-    /* background-color: rgb(252, 197, 197); */
     width: 400px;
     display: inline-block;    
     position: relative;
@@ -44,4 +42,13 @@ nav a{
     position: absolute;
     top: 40px;
     right: 10px;
+}
+
+@media screen and (max-width:550px) {
+  
+    .nav-container{        
+/*         margin: 0 auto;
+        padding: 45px 5px 50px 5px; */
+    }
+  
 }
