--- a/src/home.css
+++ b/src/home.css
@@ -5,6 +5,8 @@
     --orange:hsl(26, 100%, 55%);
     --myownor: hsl(22,100%,50%);
  }
+
+ html, body {width: auto!important; overflow-x: hidden!important} 
  
  .home {
     display: flex;
@@ -96,21 +98,24 @@ h3 span{
   
 }
 
-.additem{
-  width: 250px;
-  background-color:  hsl(26, 100%, 55%);
-  height: 50px;
-  border-radius: 5px;
-  color: white;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
 #cartimg{
   margin: 0 5px;
 }
 
+@media screen and (max-width:550px) {
+    
+    /* 
+    Want to understand why I cant see whole page on midsized screens
+    html{
+        min-height: 200%
+    }
+   */
+
+    .home section{        
+        max-width: 100%;
+    }
+  
+}
 
 
 @media screen and (max-width:850px) {
@@ -119,13 +124,22 @@ h3 span{
     flex-direction: column;
     align-items: center;
   }
+
+  .homeimgs{
+      min-width: 80%;
+  }
+
   .hometxt{
     padding-top: 0px;
     padding-left: 0px;
+    min-width: 0;
   }
 
 
 }
+
+
+
 
 
 @media screen and (max-width:950px) {
@@ -134,6 +148,9 @@ h3 span{
     gap: 15px;
   }
 }
+
+
+
 
 @media screen and (min-width:1150px) {
   
