--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -37,10 +37,20 @@ nav a{
     right: 140px;
 }
 
+.cartcounter{
+    background-color: var(--orange);
+    display: inline-block;
+    border-radius: 10px;
+    padding:  0 10px;
+    position: absolute;
+    top: 50px;
+    right: 115px;
+}
+
 .avatar{
     width:60px;
     position: absolute;
-    top: 40px;
+    top: 37px;
     right: 10px;
 }
 
