--- a/src/home.css
+++ b/src/home.css
@@ -41,6 +41,20 @@
    grid-row: 4/5;
  }
 
+ .currentimg{
+   border: 3px solid var(--myownor);
+   opacity: 0.5;
+ }
+
+ .thumbnail-img:hover{
+   opacity: 0.7;
+   cursor: pointer;
+ }
+
+ .thumbnail-img:active{
+   opacity: 0.5;
+ }
+
  .hometxt{
    letter-spacing: 1px;
    padding-top: 50px;
