Added a new page(shop) which contains items to be sold

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -2,7 +2,7 @@
     padding: 45px 50px 50px 50px;
     border-bottom: 1px solid rgb(170, 170, 170);
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     position: relative;
 }
 .logo{    
