--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -1,6 +1,6 @@
 .shoppingcart{
     background-color: white;
-    width: 420px;
+    width: 450px;
     min-height: 250px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px 2px #888888;
@@ -28,12 +28,13 @@
     list-style: none;
     display: block;    
     margin: 10px 0;
-    height: 50px;
+    height: 100px;
     position: relative;
 }
 
 .itemimg{
-    width: 50px;
+    width: 100px;
+    height: 50px;
     border-radius: 5px;
     margin: 0 5px;
 }
@@ -55,6 +56,11 @@
     bottom: 2px;
 }
 
+.subtotal{
+    left: 30px;
+    font-weight: 900;
+}
+
 
 
 
@@ -69,4 +75,17 @@
     font-size: 20px;
     border: none;
     font-weight: 700;
+}
+
+
+
+@media screen and (max-width:650px) {
+    .shoppingcart{
+        width: 400px;
+    }
+
+    .figures{
+        position: relative;    
+        top: 5px;
+    }
 }
