--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -19,9 +19,14 @@
     font-size: 20px;
 }
 
+.basket-content{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;    
+}
 
 .basket-content>ul{
-    padding-left:10px ;
+    padding-left:10px;
 }
 
 .basket-content li{
@@ -47,7 +52,7 @@
 .deletebtn{
     border-radius: 5px;
     position: absolute;
-    right: 5px;
+    right: 8px;
     top: 5px;
     width:20px;
 }
@@ -63,7 +68,11 @@
 }
 
 
-
+.total{
+    text-align: center;
+    margin:0px;
+    font-size: 25px;
+}
 
 .basket-content button{
     width: 70%;
@@ -75,7 +84,7 @@
     border-radius: 10px;
     font-size: 20px;
     border: none;
-    font-weight: 700;
+    font-weight: 700;    
 }
 
 
